# fastapi_template

./: .env.dev-example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  logger.py  pyproject.toml  report.html  report_50_stress.html  report_cookie.html  report_v2.html  results_failures.csv  results_stats.csv  results_stats_history.csv  run_server.sh
migrations/: env.py
migrations/versions/: 01b4a5e7a637_.py  3e698b038f5d_.py  3fc770634bb8_.py  4b1fab825b37_.py  620dc99f8ca6_.py  7e0f2540a77e_.py  8f61b7c1b580_extend_tables.py  92e949c64b2d_init.py  a0753866b90e_.py
src/: api.py
src/auth/: routers.py  services.py
src/celery_app/: celery_app.py
src/database/: __init__.py  connection.py  services.py
src/locust_tests/: auth_login_locust.py  locustfile.py
src/meal/: api.py  tasks.py
src/meal/database/: connection.py
src/tests/: test_main.py
src/user/: enums.py  models.py  repository.py  routers.py  schemas.py  services.py
